@@ -1,24 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST tkpng0.9.tgz 127804 SHA256 92f361d4f43c3a0638f85f87af6cef30c63a1896fa59a9220bcfab4852ab10fb SHA512 7f832ec19b53ba0f98d3db24d7b7106ae9bb6983d46ee33c46e90a1b152646f2a99ea417c9c6f9bed1f2859ef509510b531d26b3bb81f20d4e291ea1092896fb WHIRLPOOL 30243c54ccefb07d430963a8afdc4852134d8f735cb7feeb6b690587174e33be6bae61e3405a1b7d1d4a7019a1db019e54f4617e12e8350d3a4547009ea5f19e
-EBUILD tkpng-0.9.ebuild 879 SHA256 cfa48731660478f2a643671fa3a19305ff465435398adcceab55b9090c1662b8 SHA512 f48e0f0f5d833fc54416be6d8fdf11cb960e99954e0dd5f6287954d8944e63f628520c2bb5bd7f88bd28492e27d9e6268222bee0ade3f8bcc2ab10e19c63c14c WHIRLPOOL 48bc504dbd85798b9420630086bca4780ed4c209ac4bbb204e273a0d81d853e13af85a3496ecc906d4d8469d114e0e86584c0610880c4e514b4c23421fe33217
-MISC ChangeLog 598 SHA256 aa68aae6c96002142749a7d238b991c338b6bfad8fba8d62a05fc1057fff1106 SHA512 4e65c7e2f5297ad2732bc5bcb95a150c816f1fb69a99984f42bff4c05e993b7e3f6095161b94431447de5e13fce3a8dd8f677b5179e386cfc31a9113cf48ead1 WHIRLPOOL f3006c9b892dd76b254122b9f25482425cd8df6885bd669d818ed5a34bd55f974a96b5ccdc2839f25a82ad027a1929dad6de634b31cc1e76c2ac290184414e75
+EBUILD tkpng-0.9.ebuild 797 SHA256 ed190531a7ba0a92f36b0b61ed101fac03401f2703ed19d0becc2140eef79a59 SHA512 fdff19a0b20e795bd9a9537411467d4213b8d71b3c85f25dad614a3e01117f9073564a07ae7e5d3095c2b6287bc7fec710c9d9e647b43d988790e3fabc39f44e WHIRLPOOL ba686dcaee435bee106807def6113c9ce03481d300f84782de363b42f20a65b5dbaf07c81dba275afcce3be4bd639b326ded7badcbd53edac01bb1fe1808e7a1
+MISC ChangeLog 702 SHA256 062512670e310e50d0335e4a7c99ccf05e2c67eea3e267c4b8afb57109064925 SHA512 405b3a7b76ed42e34f29691156df9e1ff105bb45e6e1169269101b36397eedf6b2f37b9ab0706af0cba8db3f2ef60fe51ab30bee3c1b392b59839fc563e31c3a WHIRLPOOL 6fec17b011f78690cd21e20f78a7db5b4d1b32897bc2798641ad28e38f3927675bc16e506deb7f767b689d88270518018218019470439fcb1dbaddf6414f2ceb
 MISC metadata.xml 218 SHA256 e3bc1a1dd7edccafca9c3c36eff9b65757a4b71cf6a536820ef28959b1c32849 SHA512 8a362faa9d116a6a8714df8676622533d697e58ef946e8a441777ccab449292a6c4299e8406a14ab7d5dfe2027477a3d76fe9110e06500af0d07075067ee36f7 WHIRLPOOL f809ce6a77db0103cf974b0035f68ca9ddb80cb86e33a695b3723700d7348dbf837aa74e4a596463e97d138c0b3280bd7076a935a5855f6e73bf1c592ea41cb0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJQvwHEAAoJEDxpGckxwJCBCzgP/iGbICHwpzFFHT5raRPJbmMx
-lw+HLDBuWEhgY31Z58sl4HAcjOnnFd5CyXAedFSZG+gNlMU2oiPNGq1S8vbOWyXo
-a+QMwfy0N2icMETiPaQbaspiTZzcg9Wc5IBBtVs7RRRTuLvSTWZFJvGnxZz0DvLG
-KqijXFh1FwcW7SkeGQ3SF8QkV+0KEUnIBOpoEf1YeUTKcgEmSgiEXLwEpKR94M7U
-eapvD0QsRmmdAGU90QRCa2D2zCrHUOrcKxj76ftH18A9WgIcxIJAkOF97xnWYQVf
-K6mV2N1vxzPmsdDnRSufBIPOi0qFPNJDT+C+lveYQxguVgFTAUQm0fMxJHNcPpL3
-fHvm1W8MWUMSH1hpz8ZDz7zNgcZ/TkwmThEnYC6jstSxVprP1CJHw01EsxcxvOc6
-NyH6gCdSugI7nleCbwtOoPEmuFrMG5ukENqMhfMBeNcf7PXeSIo+WHJlZ3BJIr9t
-mVXm8Jk57RqUnlhifQdDoFZTyLaLY3pSOUyqreaB/kJ282U06GQhI7H22SVLZu+5
-YUjqdvfwAb+i41KxJ8hJeJc3YSrLjLJ2Y+gVpZluZ1eef55VM9U6ACjFC7i9p+Aw
-hF4TLwlxbewExahsGNBmLlw7iIIkIRgrI+XqvnYnuv3fNEoLWingupqCK8qLGoOY
-72ewaMT18oG+dqwshiZn
-=KBNM
+iQJ8BAEBCgBmBQJVDAyTXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirifUP/Rf3kEcMBzwf7slHnHjzbkDh
+xDbu2k4WQf6Kgzt0+tKfvZrfZgJydbxrK/4ciPTG7k4ZgIWbV5BVCffg4xko78F/
+nVf+7EDmtjn4iKernHQiC11/xhBIQP7nX9aEIE1uwEKyTAG/qIfLlCtiqVIc4j4l
+3fedSrd+eHbnU2Yvxy2ebO3JreY5bN8sqqIUrcohISxbrRyvNYNRQ5sTPnovJ2mG
+1mff2mYJIsfEkmEXu6JY34wx9Fst2XjczIY/MFarGOLtbm43TAqvhe4k5uXRqjgy
+4pY8uULSLNA3qebmsUJ6hRK42ZaQH/a3gQEC06lfsLxu9Qk8+diLXOHMUX1OFUS1
+PaIvWD8IEinlVI6VbMcZiEbnUcJTzDLyRLGqlrDPJpcdENj1yJ1GRpkQ0P8pupGA
+kjImeqL+mWAEA6viW0VSZPPSn/Z0Ac6pzJw7OV2gzuY4sY4jBP7qqBb/EIHtRm0V
+kKPF19774EdHY5nDtd+fVzku95rulrYZw3MAKphVWrX0vpFldTItgHKMu1BnFl+0
+VYPFbZBJGKPqVaErYtd76aPAebr5I/iP/VMQlK5la7sWtGtzwbklzW7bK04kWYYI
+cVROtFrcAUo9+0xD4cwull9tAw+3riD6BNmITFC1qjW9VKTk3Or9fffnqjgidJLL
+88NdCVs/D6hfsmcuKYdI
+=dtmQ
 -----END PGP SIGNATURE-----
