@@ -1,5 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX 1.1-ldflags.patch 371 SHA256 944943ef5ce0085c322f30bad80e7387a7b08da32ef1cd1f49f8cf8626343bc2 SHA512 d29c06676607eca5fb7a0a0675382a80441117a5a070236329d8f4e8c046a5ade060d7e618740953f4c4c87f432fd661a19e201b737b4273805a48bd0165f553 WHIRLPOOL 6d4b24f957b6a6ae05909a3aadf500bd0e4a3f94d3052c5e09c667fd2c02afeedb1e32ba42e1e8a5921b1f91cf5f9bef0c23c52286bc61da7b31886c6125af2e
 DIST tktray1.1.tar.gz 109936 SHA256 e4c4a8ad75eacbdf2a6950dd40249dfb82897d59b999afcc05c9587081c8926f SHA512 eac0d61bd84d61ea4ab9d5e3b5a086d4ef0051ddc11f5daf5a07920abc488f9967174b7f1294c77da9b5578f2b937fc713c8edc3753862b5d47c701678f20cef WHIRLPOOL 35eaa9cbc2643b06f3f11fbb453a43aab0da5d63e0fe6172cbc84aa21d9ac9e769fd9891640fd7e40db701e1f02825379cf9a71b805b968fc0d7c50f42413e97
-EBUILD tktray-1.1-r1.ebuild 949 SHA256 dbb3b88f6d4858a086dcae92635a670a19ee905c050bd25dbd5fb1ceaeb9f2fd SHA512 db0e92077fad7345bc90e16935a1dfead93e3eafd45cb92a096f267d9dbd3b140036912af70bdebfb66c133e21f9abb3c3e1b1446780f718588f6a8c54613258 WHIRLPOOL 72356b73688397077dec999318df4e5fa9f4a12f8b8af1356bb90eb4520cb4637034b4e305eeab596b0a63ca7eee4df07ad55e0583c068554607d48f74ba0c6c
-MISC ChangeLog 1357 SHA256 d6446d68bcfef1a9b30efeb6352307f7357bb11ef27eb34d4f8aaf6bcb43a197 SHA512 6415a6d15301ad71b7f72c7d2591cccf03e78333be6b41fcd3d2f0bf6039bebe602e53ced7d0702f9ec4c7697e5854e4aa49f61ca141e5ef494b9357967480ba WHIRLPOOL d1f248488f34f8bbe7ae2f8474d52a9fe377d63e913449cd556725bb32418e99d3d12a226f26617ca043193f9c9f137eeb4170ea11ce6855547f902375a89d31
-MISC metadata.xml 178 SHA256 125432dca3d6ae740eecf0d20a7b038c86c32331f694eb930e66ef38992087e3 SHA512 f21b7fed036827c4fb949f14a0c6ca812c0362555a5bc76cf70571310b4a4ca33fea57bef2f433a381bbad8f351670179cff51783224f3744fc8bd10106eefb2 WHIRLPOOL c66dffd607913bcaa8749d0e2ea3656de1577ebfbd072561b55ebc8dab81540ae5e1c0398bf012addfe090015c8bd550b4b75fa106df40f6cd7576fdc94f945c
+DIST tktray1.3.9.tar.gz 134484 SHA256 ef48b75ea7979186a05b605f8c153f92bbcc46cb76dee8be1d30bcda179bfcfc SHA512 2c52a343e7f8ff5b7e7bb2e2f1de7766111ce6b47b8ace478a1f2aaa6c28a5b19ec854f2b22511136be1f1da2a87f506932a1d1b893deb3c44a7e47a28609518 WHIRLPOOL cb22a1611f839f604e26061757f978d280faa0b9d0f0ac388c51d686f87f93b7370c43dd1685617ed25ec8d58532ee8e11cc6552e84f677958094fe54b81b9e5
+EBUILD tktray-1.1-r1.ebuild 956 SHA256 d1bebb0b435f1e17b8e4b7ecdb382c4609adf16e39055fb76b2eaa5f635bdc97 SHA512 aeebb36347de0765ace07097665fdd55970666359638eab6a265e975ee3574a01a911f064ffaec3e51401efdb1d7da718c95b354ba75deb8c0f8fef2a7b0bd72 WHIRLPOOL b07cd529b903f7173ef570c0c61372f2459fee29bc960a0d9b54620e84e870ccab1465eff500849150127830e9fa91fa4687495cd06b49c626d340a746a943d7
+EBUILD tktray-1.3.9.ebuild 890 SHA256 ca6159a455c71e5c2fa8a85264fa5be0b7233ffcb18e455360e559ecd87b2262 SHA512 d5dca8b2eb33a8487abfb5e8b058f8630980638f3baceadd9d464fa8a1ddf3d3d2129b65c34450255dc6cb9a8c86974f1d76436f4f23b8c020f852e6859065ae WHIRLPOOL 14c954f620b7e95600d52bf65d94d49f1f095bad74f698c4eec421196f831f4521f3d0d9e99c3afb7480670a8da19903d11ccfc5a9e077421b62e3f144bda0c0
+MISC ChangeLog 1541 SHA256 6731a55f72d07ce2552bf5f92f5ff9f7a8ddc81cc4088e0e424976b9ed1d7fbc SHA512 50ece86b7d3bcc5cab6fa9d7799f46eced3d0d40bf9e43cf0be59df68a72243cde56eecdb57b30659a43bd87aa28bd762680fd1f0dc93c49ddc096cca6e7e6d9 WHIRLPOOL 4fbac96b32e886b82d15ae2224c85aa6b5c0ae4f9a27025e7b551da58fa47f82fd8b0da20a0c62a42c9af36de792bce9c3900b0820ffb17ffb1ff48cb76dd7da
+MISC metadata.xml 182 SHA256 815fd82de558c83e8a8d081576ce49e0cd067aa4313c96ec7d214f31c1d5b61d SHA512 b9af609ded27e716bea79d28b838def21553bcfd75d2a3808fe4e85c4b51fd26c67d66bfc15ade30d249047970700985bb1c0b1bd5ea63573f945af59ae660fb WHIRLPOOL d53ff9d0a0f72a5be76b470b30108f8e40f52837b47e35bb8c1263749c0ad4f6b41c65f399b3c624faf4aebd494bcd04ae247fba44f1ea34b2a9f57f763c3b9f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJVDA3oXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirSz4QAI5o5ZMfcW7ryehOoo0aMEPx
+5g9thYUiAsCAv9LFPpKhOSzCVuhWBputLX6vm6ye1ER5+nLUyQvWxK91ZLmbHfJf
+OaS+FZwLYODsa8S/aEtZtyUzRoRjUA1Y9SA7LqgTKzytZKwPg034K8tlUBfRFkQZ
+YR8lweqS9fMI3F/Sn/6PCkSOp+sdnWcCWg2iCzsH3PSVuOF9bvsyMC/wg/5NSfdP
+oyctui40ifoNn90vnsTmsz1NSXv0N5kwt3BbZclTuPVPMIbyn3KglVOSNHWygRQu
+WgoMXB1oEKlRXIg6kjsqV+6kSY+1twS41i4CBNNM5f9upkQ3olqgPxewTGRDZILV
+E9qp9CAG9K0NFL8edrrt9kKR7f2thrI+I1xFaE68G6xX6SnhtNa9YKX5XHDk+pk/
+wrwecqG9KH5937kOEGSOh3s1xLOFV8+yWoBRHmRn02rENbZlK121PUGNzpzCk+/N
++9yH79E73tiImGOVf0rVozCgyiWrpKKF4DGV/gwFgD0w4iB3HB5D3NdwGska7oq7
+at1IAVo3bKF33wbOHOzB8hoYpuwj4SsCutuoW1HHRSBIB/sKjmVycyWvrXNvLi6e
+aXeU8gaiR/3QMKfXtLQuNeQ+2kgT1XZ8ItP5lkJWoMGNhp4zTx4YK2bzGcBTgNYK
+Dy0Yhj8Eqm0FJGOi7cK+
+=zAF0
+-----END PGP SIGNATURE-----
