@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>net-im</herd>
-<herd>tcltk</herd>
+  <herd>net-im</herd>
+  <herd>tcltk</herd>
 </pkgmetadata>
