@@ -1,17 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX tls-1.5.0-bad-version.patch 540 SHA256 175048c3ff600b974c03e24d1451a570d8eda1c86f3ed42714736983978c9b2d SHA512 22985a759f327392a5153bd72dd4a1a812f985b1162d7ee8b653ac131e998da6a9b465df2faa323c73ace33e28ea884151b9968adc065f149412483194f33a45 WHIRLPOOL 59e5c647eee03466304cfff7e072a1f267386b5a19b2369e2c3ea5b42de76a72be61ddb9e081623f6d54955d98139713301f4fdae3a4204b04d3b12c78e6c7f2
-DIST tls1.5.0-src.tar.gz 113600 SHA256 422ac2e4a812763a8f859b868c659d69769945ab754bd418b2eb07ce9bbcd253 SHA512 d77d09d3c9113d6888d2a53b04f81b553719d62fc027c241c88250477472101942b31e552d3ab08f2f0dabf5a792c25e0d65f1d643e1c1010057da5ef8bb5584 WHIRLPOOL c6f1023a07096d9fe04eccfbff71027b54f011f38bfc4c8b260cb73d9000f46e8de21c9f3c68b6981dcc6711a13ec5b4e12ee8d77177eb588293c1260ce54a09
 DIST tls1.6-src.tar.gz 168043 SHA256 adec50143a9ad634a671d24f7c7bbf2455487eb5f12d290f41797c32a98b93f3 SHA512 beaca2653a11924f022e28254cef5071ecb8ab2e2355496d278fcab1bdcc46424aa58d2fe176aea26ec4fbe4416a912b5af8e8e69571c8a5301b7921ecf48383 WHIRLPOOL 5769eccd4df94558d7b5cdaa7234f4b248e3d8108686c3104bfa53a709a444088cdbf51b9660ecaa1f213c9391afbf81108ed330fe41bed3409d3c9364ac9790
-EBUILD tls-1.5.0-r1.ebuild 821 SHA256 ee1d5fbc4d49e191e904b3d1a49657231f87cd1994bd19dfdb728de40371b422 SHA512 f98909460188761cb99c755294afc2ddf138dd663615732ca4809b745bb5f0e280ded5034dd2f0512ea78f03d107bd72b8e595e004a25946bae2b7cb95752a06 WHIRLPOOL 1cadd403e20080785e0d294e1b61fecb253787d0d6a5402fffa70812cb3f2be201fb7a122f95f81bb12d7af10a70404e0c908509ff90c4daeb124be540020b4e
-EBUILD tls-1.6-r2.ebuild 1106 SHA256 14de521e12d308895e33df1c98be6416f2e2346433714a866557e2f45ec1833a SHA512 6e89d3b5f32e6049e58a767bf9f772e9a4556d182ce9a2edd66364d0a581894c31991aaaeccf74a7fc51a75803f5d793298760a0dd50dd33eb3f4dfedbf109a2 WHIRLPOOL 67c1166c398779817bef5d15965384a99d7974e151441afa8b656a4cb511885f516395eccb8db731270a55d28f33e8ea4d4ecd0b4f55c95f3d2706fae0c88ec2
-MISC ChangeLog 3645 SHA256 9bb3f399f980c9dde7cbfb0e0b8c780d9bfc030c8601f9d31ca5da3dde904cae SHA512 db07f342a9fecbb406579cf273e588f8949d9dd77365fac60dfe81a3a7fabf339ce491bb93af5131d663b27285f5e9a6acf8c24e7d0a0c16ac63c54c5c1af3cb WHIRLPOOL 1d237824efa1e0e78afcb63d66a9131a2ffe255b2fac4abfcc849702e2d8a58d898f43f2fe52e68d7d83e96edd54d3f827af487cec483cf098719bc2aab6226b
+EBUILD tls-1.6-r2.ebuild 1111 SHA256 a47c6fb2f3c2392bf2921039a9f1f282ed7b114108b69194980a4d02fda93a12 SHA512 c324dd5ac260b3364393b6911c7cd65f20824f7d994c1ab6f98da243c00941b720289f6986480f8dba57f75ab3b41f49d8303ae7276ca68cfcc032a2e1a3705e WHIRLPOOL 950365b6738fd12de5dffbe26d4f6d03ec5557048a4d7a6f0b556e328024d9dd03fc6c56b379653d3ecf113c7d15c911260f5d04e6caadaca94d0fa797c6232c
+EBUILD tls-1.6-r3.ebuild 1047 SHA256 e5a827649f8291143814f01e4b84fcfb1c925f972c2210b257a46b318fc5527a SHA512 36c3fcf507eb0e536fc6a9f72cd34b77874c67b4a89f5a5a843ac5538a34026d2d092285000a60eea45cc5a89ba0903734a29d07454309d851c9339815d40c99 WHIRLPOOL 453a390f4728b383c7860a98018dbf05d24063e3534277419a8c8567fc4f40eb86662dea0330cb996d9cf5692d9a1894c3cd87fa544237cbb2dc569cc97e5657
+MISC ChangeLog 3819 SHA256 df5f8dce15f76db4de7bba0fd8ab2c62a227ba9af49f546f7d47bbd93e9bb30e SHA512 9dba4906909a31d9b9428b289b55b1a10affc51e11145b17963e3d79c65e3df631aad39c04a3c126ce6235b21de693fd467b9bddcff5e3096538c67d972df753 WHIRLPOOL a14eebb854267b382a53f22281c2af32109f10152e1321acbe3d3bbe043ce95faedeb8dcc2a79012109a699217bfc2c9dc9e0d416c5362af202f36ac252197cc
 MISC metadata.xml 158 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290 SHA512 60ffb8f937083ebfa2a70b1a3ac90bd9ca29cae6194ab77341a78c17d44123cedf5bf740611910e9a2f65585d0973e489bb6062471d26d0a5107e1e8b7f267ae WHIRLPOOL ef7a6760bc24a47df7eb857c63984981cf6b92fc52ce6cb4f71d937308dbbb94590841c5870bf0d6d550084f8dbe59707be14e61e3482267c5268c8f7d3a1080
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlPn45EACgkQcaHudmEf86qguACeNKaJlfFgqL6fGV4eOS8cnFF6
-XxcAn3mcp4ggJp7Lr2UGKHMfUMSEY35T
-=zcOU
+iQJ8BAEBCgBmBQJVDA66XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirbAYQAJGBna7vgoOg07XdjgW0Bova
+FP3aogTzKO7CloP8F/DRW/nQB+I+eTbv1ddL0CZn9jzvdBOsQmVdJMC8X6BP7cuU
+XQLG8MtxDYuFS7OJq1rsdanBOy4uTuiNaELCWk3mTjP82jUWnChy4i8APw3gpXT1
+zRiTe9KbtkmGymgg2+LpPqUChsc0Js8RB1w4wjYwZvUKCHiqwzf6EB4Ugx8uHoVp
+fI8DdibeVv6Pea2MwyZeT0sdgZW6mtutdbG0iA6vMO3GtiMP4c3oImYFP/UkEkj3
+isYJSyGaBPAsFgyg0fPRPNX09vsF/NgmR2jJFGvJdW5DOPFHR92TJspZI3XD+Lit
+aAOHXKoxT0EKK2oqswGatcLKVurFqrMYkzFwu0j2aBpMbsKSMyROoGUu7RXu/kNe
+mSOPWCI/BfmaHjgBZhv50NezmS6/jWvIczUPJUCSIeCnNadP1VUcVF2pUEeDccVg
+fZgAo08en2Gy3Xzeqh2PJ0v0bXqP8XtPZHDmKV0h3HQ+fgf2Fr8wHQWQUqrCI7NG
+T+XgSOWUekROSaGt094+jAG2E0vHRVmTnYp1/jgA0dFgbP8ixc25U6AWGt8xuQHh
+J1J1dZPTDS4tBskndRw9qKaui6h0ZFFvH8UJ7JUQG+qdtlU8FcwKFB4rYLIZLz8n
+hOYJsCAsRcHzRjcVTE0R
+=eYVY
 -----END PGP SIGNATURE-----
