@@ -1,8 +1,8 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tls/tls-1.6-r2.ebuild,v 1.10 2015/03/20 12:12:41 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tls/tls-1.6-r3.ebuild,v 1.1 2015/03/20 12:12:41 jlec Exp $
 
-EAPI="3"
+EAPI=5
 
 inherit eutils multilib
 
@@ -14,13 +14,13 @@ SRC_URI="mirror://sourceforge/tls/${MY_P}-src.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ppc ~ppc64 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="tk"
 
 DEPEND="
-	dev-lang/tcl:0
-	dev-libs/openssl:0
-	tk? ( dev-lang/tk:0 )"
+	dev-lang/tcl:0=
+	dev-libs/openssl:0=
+	tk? ( dev-lang/tk:0= )"
 RDEPEND="${DEPEND}"
 
 RESTRICT="test"
@@ -34,9 +34,8 @@ src_configure() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc ChangeLog README.txt || die
-	dohtml tls.htm || die
+	default
+	dohtml tls.htm
 
 	if [[ ${CHOST} == *-darwin* ]] ; then
 		# this is ugly, but fixing the makefile mess is even worse
