@@ -1,13 +1,13 @@
-DEFINED_PHASES=configure install
-DEPEND=>=dev-lang/tcl-8.4 >=dev-lang/tk-8.4 sys-libs/zlib
+DEFINED_PHASES=configure
+DEPEND=>=dev-lang/tcl-8.4:0= >=dev-lang/tk-8.4:0= sys-libs/zlib
 DESCRIPTION=Implements support for loading and using PNG images with Tcl/Tk
-EAPI=3
+EAPI=5
 HOMEPAGE=http://www.muonics.com/FreeStuff/TkPNG/
 IUSE=debug threads
 KEYWORDS=~amd64 ~x86
 LICENSE=tcltk
-RDEPEND=>=dev-lang/tcl-8.4 >=dev-lang/tk-8.4 sys-libs/zlib
+RDEPEND=>=dev-lang/tcl-8.4:0= >=dev-lang/tk-8.4:0= sys-libs/zlib
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/tkpng/tkpng/0.9/tkpng0.9.tgz
-_md5_=a10dd03e0a4cb790de6b8b3ce3e94708
+_md5_=dcc626601e997db47873cee88684e6a6
