@@ -1,14 +1,14 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=>=dev-lang/tcl-8.4 >=dev-lang/tk-8.4 x11-libs/libXext
+DEPEND=>=dev-lang/tcl-8.4:0 >=dev-lang/tk-8.4:0 x11-libs/libXext
 DESCRIPTION=System Tray Icon Support for Tk on X11
 EAPI=3
 HOMEPAGE=http://sw4me.com/wiki/Tktray
 IUSE=threads debug
 KEYWORDS=~alpha amd64 ~ppc ~sparc x86
 LICENSE=tcltk
-RDEPEND=>=dev-lang/tcl-8.4 >=dev-lang/tk-8.4 x11-libs/libXext
+RDEPEND=>=dev-lang/tcl-8.4:0 >=dev-lang/tk-8.4:0 x11-libs/libXext
 RESTRICT=test
 SLOT=0
 SRC_URI=http://www.sw4me.com/tktray1.1.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=0aed1f9fdfe7c97e047e8a944df370c9
+_md5_=7ae155566712c5091c827b8f497e075d
