@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure prepare test
+DEPEND=>=dev-lang/tcl-8.4:0= >=dev-lang/tk-8.4:0= x11-libs/libXext test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DESCRIPTION=System Tray Icon Support for Tk on X11
+EAPI=5
+HOMEPAGE=https://code.google.com/p/tktray/
+IUSE=debug threads test test
+KEYWORDS=~alpha ~amd64 ~ppc ~sparc ~x86
+LICENSE=tcltk
+RDEPEND=>=dev-lang/tcl-8.4:0= >=dev-lang/tk-8.4:0= x11-libs/libXext
+SLOT=0
+SRC_URI=https://tktray.googlecode.com/files/tktray1.3.9.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=553765428b1ce57521e54aeb3b9a1859
