@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=dev-lang/tcl dev-libs/openssl tk? ( dev-lang/tk )
-DESCRIPTION=TLS OpenSSL extension to Tcl
-HOMEPAGE=http://tls.sourceforge.net/
-IUSE=tk
-KEYWORDS=alpha amd64 hppa ppc sparc x86
-LICENSE=BSD
-RDEPEND=dev-lang/tcl dev-libs/openssl tk? ( dev-lang/tk )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://sourceforge/tls/tls1.5.0-src.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=b8419a03f159dd4d5c116e34fa180809
