@@ -1,14 +1,14 @@
 DEFINED_PHASES=configure install
-DEPEND=dev-lang/tcl:0 dev-libs/openssl:0 tk? ( dev-lang/tk:0 )
+DEPEND=dev-lang/tcl:0= dev-libs/openssl:0= tk? ( dev-lang/tk:0= )
 DESCRIPTION=TLS OpenSSL extension to Tcl
-EAPI=3
+EAPI=5
 HOMEPAGE=http://tls.sourceforge.net/
 IUSE=tk
-KEYWORDS=alpha amd64 hppa ppc ~ppc64 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=BSD
-RDEPEND=dev-lang/tcl:0 dev-libs/openssl:0 tk? ( dev-lang/tk:0 )
+RDEPEND=dev-lang/tcl:0= dev-libs/openssl:0= tk? ( dev-lang/tk:0= )
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/tls/tls1.6-src.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=ab3e8151a7282d8ac26731bcb4ea1467
+_md5_=26a9c63e23875512db95360b9016d6e4
