@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tkpng
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkpng/ChangeLog,v 1.3 2012/12/05 08:08:19 ulm Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkpng/ChangeLog,v 1.4 2015/03/20 12:03:30 jlec Exp $
+
+  20 Mar 2015; Justin Lecher <jlec@gentoo.org> tkpng-0.9.ebuild:
+  Fix tcl/tk slotting; Bump to EAPI=5
 
   05 Dec 2012; Ulrich Müller <ulm@gentoo.org> tkpng-0.9.ebuild:
   Update LICENSE, tktreectrl was a duplicate of tcltk, bug 445468.
@@ -13,4 +16,3 @@
   02 Apr 2010; Justin Lecher <jlec@gentoo.org> +tkpng-0.9.ebuild,
   +metadata.xml:
   New addition per bug 184133
-
