@@ -1,6 +1,12 @@
 # ChangeLog for dev-tcltk/tls
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tls/ChangeLog,v 1.35 2014/08/10 21:26:41 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tls/ChangeLog,v 1.36 2015/03/20 12:12:41 jlec Exp $
+
+*tls-1.6-r3 (20 Mar 2015)
+
+  20 Mar 2015; Justin Lecher <jlec@gentoo.org> +tls-1.6-r3.ebuild,
+  -tls-1.5.0-r1.ebuild, tls-1.6-r2.ebuild:
+  Fix tcl/tk slotting; Bump to EAPI=5
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> tls-1.5.0-r1.ebuild,
   tls-1.6-r2.ebuild:
